syntax = "proto3";

package order;

import "google/protobuf/empty.proto";
import "kitchen.proto";

message OrderID {
  int32 id = 1;
}

message Order {
  int32 id = 1;
  kitchen.Recipe meal = 2;
}

message OrderList {
  repeated kitchen.Recipe orders = 1;
}

service OrdersService {
  rpc PutOrder(google.protobuf.Empty) returns (OrderID) {};
  rpc GetOrders(google.protobuf.Empty) returns (OrderList) {};
  rpc GetOrder(OrderID) returns (Order) {};
}
